# tagutil

./: .hgignore  .travis.yml  CMakeLists.txt  COPYING  GNUmakefile  INSTALL  INSTALL.md  LICENSE  MB_try.sh  Makefile  Makefile.BSD  Makefile.Linux  Makefile.in  Makefile.puid  PORTING  README.md  config.h  pmkfile  t_action.c  t_action.h  t_backend.c  t_backend.h  t_compat.c  t_config.h  t_config.h.in  t_editor.c  t_editor.h  t_error.h  t_file.h  t_file_compat.c  t_file_compat.h  t_filter.c  t_filter.h  t_format.c  t_format.h  t_ftflac.c  t_ftflac.h  t_ftgeneric.c  t_ftgeneric.h  t_ftid3v1.c  (+47 more)
.github/: dependabot.yml
.github/workflows/: test.yml
build-tests/: i_can_haz_getprogname.c  i_can_haz_strdup.c  i_can_haz_strlcat.c  i_can_haz_strlcpy.c  i_can_haz_sys_queue_h.c
build-tools/: gperf-mpeg3.sh
compat/: getprogname.c  strlcat.h  strtonum.h  subr_sbuf.c
compat/include/: getprogname.h  strdup.h  strlcat.h  strlcpy.h
compat/include/sys/: queue.h  sbuf.h
compat/tests/: a.out  i_can_haz_getprogname.c  i_can_haz_sbuf.c  i_can_haz_strdup.c  i_can_haz_strlcat.c  i_can_haz_strlcpy.c  libFLAC_assert_clash.c
expat_stuff/: MB_try.sh  dummy.xml  t_xml.c  t_xml.h  xmldisplay.c
id3/: README.md  id3fix.c  id3read.c  id3read.h  main.c
libofa-examples/: Makefile  example.cpp
p/GNU/: Makefile  Makefile.patch  insane_dirname.patch
scripts/: tagutil-track  tagutil-trim
src/: CMakeLists.txt  FindIconv.cmake  t_action.c  t_backend.c  t_backend.h  t_config.h  t_editor.c  t_ftflac.c  t_ftid3v1.c  t_ftoggvorbis.c  t_fttaglib.c  t_json.c  t_loader.c  t_loader.h  t_renamer.c  t_renamer.h  t_tag.c  t_taglist.c  t_taglist.h  t_toolkit.c  t_toolkit.h  t_tune.c  t_yaml.c  tagutil.1  tagutil.c
src/compat/: eaccess.c  subr_sbuf.c
src/compat/include/: strdup.h  strlcpy.h
src/compat/include/sys/: queue.h  sbuf.h
src/compat/tests/: i_can_haz_eaccess.c  i_can_haz_sbuf.c  i_can_haz_strdup.c
test/: .gitignore  Gemfile  Makefile
test/features/: add.feature  backend.feature  clear.feature  edit.feature  help.feature  load.feature  print.feature  rename.feature  set.feature  version.feature
test/features/step_definitions/: tagutil_steps.rb
test/features/support/: env.rb
test/scripts/: evil-editor.rb
